--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,8 @@
 <% include partials/header.ejs%>
 
     <body>
-        <% body %>
+        <%-body-%>
+            <% include partials/footer.ejs%>
     </body>
 
 </html>
