--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,37 @@
 <% layout('layout') %>
 
-    <>
-        <h1>test</h1>
-    </>
+    <body>
+        <div id="wrapper">
+            <div id="sidebar-wrapper">
+                <div class="sidebar-brand">
+
+                </div>
+
+                <ul class="sidebar-nav">
+
+                    <div class="profile_info">
+
+                    </div>
+
+                </ul>
+            </div>
+
+
+            <div id="page-content-wrapper">
+                <%include partials/nav.ejs %>
+
+                    <div class="container-fluid main_body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                            </div>
+                        </div>
+
+                    </div>
+            </div>
+
+        </div>
+        <!-- /#wrapper -->
+
+
+    </body>
