minor form changes

--- a/views/user-login-signup/signup.ejs
+++ b/views/user-login-signup/signup.ejs
@@ -19,7 +19,7 @@
 
         <div class="row signup">
 
-            <form method="POST" class="" id="signupForm" action="/signup">
+            <form method="POST" class="" id="signupForm" action="/user/signup">
 
                 <div class="row">
                     <div class="form-group col-xs-12 input_group">
